--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express-handlebars": "^3.1.0",
         "mysql": "^2.17.1",
         "mysql2": "^1.6.5",
+        "path": "^0.12.7",
         "sequelize": "^5.10.1"
     }
 }
